--- a/zaliczenie-.net/Views/Libraries/Create.cshtml
+++ b/zaliczenie-.net/Views/Libraries/Create.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
+
 <h1>Create</h1>
 
 <h4>Library</h4>
@@ -29,9 +30,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select class="form-control">
-                    <option>Available</option>
-                    <option>Unavailable</option>
+                <select>
+                    
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
