--- a/zaliczenie-.net/Views/Libraries/Create.cshtml
+++ b/zaliczenie-.net/Views/Libraries/Create.cshtml
@@ -30,8 +30,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select>
-                    
+                <select class="form-control" id="Status" name="Status">
+                    <option>Select Status</option>
+                    <option>Available</option>
+                    <option>Unavailabel</option>
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
