--- a/zaliczenie-.net/Views/Libraries/Edit.cshtml
+++ b/zaliczenie-.net/Views/Libraries/Edit.cshtml
@@ -30,7 +30,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <select class="form-control" id="Status" name="Status">
+                    <option>Select Status</option>
+                    <option>Available</option>
+                    <option>Unavailable</option>
+                </select>
+                <span asp-validation-for="Status" class="text-danger"></span>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
