--- a/zaliczenie-.net/Views/Shared/_Layout.cshtml
+++ b/zaliczenie-.net/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <partial name="_LoginPartial" />
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Libraries" asp-action="Index">Catalog</a>
+                        </li>
                     </ul>
                 </div>
             </div>
