--- a/zaliczenie-.net/Views/Libraries/Index.cshtml
+++ b/zaliczenie-.net/Views/Libraries/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<zaliczenie_.net.Models.Library>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Books";
 }
 
-<h1>Index</h1>
+<h1>Books</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
