--- a/zaliczenie-.net/Views/Libraries/Search.cshtml
+++ b/zaliczenie-.net/Views/Libraries/Search.cshtml
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Tittle">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Tittle">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Tittle">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.idBook">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.idBook">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.idBook">Delete</a>
             </td>
         </tr>
 }
