teraz ok po prostu git ignorowal plik

--- a/zaliczenie-.net/Views/Libraries/Search.cshtml
+++ b/zaliczenie-.net/Views/Libraries/Search.cshtml
@@ -16,6 +16,9 @@
                 @Html.DisplayNameFor(model => model.idBook)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Tittle )
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Author)
             </th>
             <th>
@@ -32,6 +35,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.idBook)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tittle)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Author)
