--- a/zaliczenie-.net/Views/Libraries/Index.cshtml
+++ b/zaliczenie-.net/Views/Libraries/Index.cshtml
@@ -4,15 +4,15 @@
     ViewData["Title"] = "Books";
 }
 
-<h1>Index</h1>
+<h2>Books</h2>
 
     <p>
         <a asp-action="Create">Create New</a>
     </p>
     <form asp-action="Search">
         <p>
-            Title: <input type="text" name="SearchString" />
-            <input type="submit"/>
+            Title: <input type="text" name="SearchString" class="input" />
+            <input type="submit" class="przycisk"/>
         </p>
     </form>
 
