--- a/zaliczenie-.net/Views/Home/Index.cshtml
+++ b/zaliczenie-.net/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to our library! </h1>
-    <p>Here you can find any book you want to read</p>
-    
+    <p>Here you can find any book you want to read!</p>
+    <p><img src="https://www.ju.edu/english/img/books-by-thomas-kelley-at-unsplash.jpg"></p>
 </div>
 
 
